--- a/HTML_CSS/my_page.html
+++ b/HTML_CSS/my_page.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h1>Heading</h1>
-<p>diibadaaba</p>
+    <a href="https://www.youtube.com/watch?v=Yafjp7U7xUk&">el linkki</a>
 </body>
-</head>
 </html>
