--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webdesign Paja</title>
 </head>
 <body>
-    <a href="https://www.youtube.com/watch?v=Yafjp7U7xUk&">el linkki</a>
+    
 </body>
 </html>
