--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheets.css" rel="stylesheet">
     <title>Webdesign Paja</title>
 </head>
 <body>
-    <header>
-        
+    <div class="main-boxes">
+    <header class="main-menu">
+        <img src="https://www.krustyloaf.co.uk/uploads/1/2/1/9/121956813/krusty-loaf-white-roll_orig.png" class="logo">
+        <ul class="main-menu-buttons">
+            <li><a href="index.html"></a>Home</li>
+            <li><a href="products.html"></a>Products</li>
+            <li><a href="contact.html"></a>Contact</li>
+        </ul>
     </header>
+
+    <main>
+        <section class="main-page">
+            <h1>Web Design Is My Passion</h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Fresh_made_bread_05.jpg">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia architecto assumenda dolorum officia nisi cum neque omnis laboriosam corrupti, unde iste similique laudantium quos sint temporibus commodi a deleniti repudiandae.</p>
+        </section>
+    </main>
+</div>
 </body>
 </html>
