Front end edistystä

--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets.css" rel="stylesheet">
-    <title>Webdesign Paja</title>
+    <title>Bread Co</title>
 </head>
-<body>
-    <div class="main-boxes">
-    <header class="main-menu">
-        <img src="https://www.krustyloaf.co.uk/uploads/1/2/1/9/121956813/krusty-loaf-white-roll_orig.png" class="logo">
-        <ul class="main-menu-buttons">
-            <li><a href="index.html"></a>Home</li>
-            <li><a href="products.html"></a>Products</li>
-            <li><a href="contact.html"></a>Contact</li>
-        </ul>
-    </header>
-
-    <main>
-        <section class="main-page">
-            <h1>Web Design Is My Passion</h1>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Fresh_made_bread_05.jpg">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia architecto assumenda dolorum officia nisi cum neque omnis laboriosam corrupti, unde iste similique laudantium quos sint temporibus commodi a deleniti repudiandae.</p>
-        </section>
-    </main>
-</div>
+<body class="index-main-layout">
+    <div class="container">
+        <header class="main-header">
+            <div class="header-logo">
+            <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            </div>
+            <ul class="header-buttons">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </header>
+        <main class="main-layout">
+            <section class="section-content">
+                <h1>Bread Co</h1>
+                <img src="https://i2.pickpik.com/photos/961/172/1018/bread-loaf-appetite-baked-preview.jpg" alt="">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quam aperiam minima consequuntur unde quis autem delectus culpa magnam nobis, error nam modi nemo sapiente. Ipsa eveniet odit magni ratione.</p>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
