--- a/HTML_CSS/products.html
+++ b/HTML_CSS/products.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="stylesheets.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body class="index-main-layout">
+    <div class="container">
+        <header class="main-header">
+            <div class="header-logo">
+            <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            </div>
+            <ul class="header-buttons">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </header>
+        <main class="main-layout">
+            <section class="section-content">
+            </section>
+        </main>
+    </div>
+</body>
     
 </body>
 </html>
