--- a/HTML_CSS/products.html
+++ b/HTML_CSS/products.html
@@ -19,11 +19,27 @@
             </ul>
         </header>
         <main class="main-layout">
-            <section class="section-content">
+            <section class="product-1">
+                <img src="Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque id magni, quibusdam debitis ad, consequuntur vero corrupti praesentium aliquid sapiente minus consectetur laudantium quia explicabo. Nesciunt perferendis quisquam fuga?</p>
+                <article class="product-2">
+                    <ul>
+                        <li>
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Reik%C3%A4leip%C3%A4_view_from_above.jpg">
+                            <p>Lorem ipsum</p>
+                        </li>
+                        <li>
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Fresh_made_bread_05.jpg">
+                            <p>Lorem ipsum</p>
+                        </li>
+                        <li>
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Breads_of_Russia.jpg">
+                            <p>Lorem ipsum</p>
+                        </li>
+                    </ol>
+                </article>
             </section>
         </main>
     </div>
-</body>
-    
 </body>
 </html>
