--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -21,7 +21,7 @@
         <main class="main-layout">
             <section class="section-content">
                 <h1>Bread Co</h1>
-                <img src="https://i2.pickpik.com/photos/961/172/1018/bread-loaf-appetite-baked-preview.jpg" alt="">
+                <img src="Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quam aperiam minima consequuntur unde quis autem delectus culpa magnam nobis, error nam modi nemo sapiente. Ipsa eveniet odit magni ratione.</p>
             </section>
         </main>
