--- a/HTML_CSS/home.html
+++ b/HTML_CSS/home.html
@@ -13,7 +13,7 @@
             <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
