--- a/HTML_CSS/products.html
+++ b/HTML_CSS/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="stylesheets.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Products</title>
 </head>
 <body class="index-main-layout">
     <div class="container">
@@ -13,7 +13,7 @@
             <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -21,20 +21,26 @@
         <main class="main-layout">
             <section class="product-1">
                 <img src="Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores cumque id magni, quibusdam debitis ad, consequuntur vero corrupti praesentium aliquid sapiente minus consectetur laudantium quia explicabo. Nesciunt perferendis quisquam fuga?</p>
+                <p>Here is Bread Co's inventory of different bread types </p>
                 <article class="product-2">
                     <ul>
                         <li>
+                            <h2>Bread 1</h2>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Reik%C3%A4leip%C3%A4_view_from_above.jpg">
-                            <p>Lorem ipsum</p>
+                            <figcaption>Rye bread</figcaption>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sunt cupiditate error animi excepturi velit quos quasi quas soluta, numquam pariatur exercitationem, incidunt iste magni sapiente voluptatum neque ratione. Officia?</p>
                         </li>
                         <li>
+                            <h2>Bread 2</h2>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Fresh_made_bread_05.jpg">
-                            <p>Lorem ipsum</p>
+                            <figcaption>Brown bread</figcaption>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugit earum, aspernatur ad, corporis hic odio facere corrupti provident praesentium delectus harum blanditiis eveniet aliquam voluptatum est, ea numquam distinctio?</p>
                         </li>
                         <li>
+                            <h2>Bread 3</h2>
                             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Breads_of_Russia.jpg">
-                            <p>Lorem ipsum</p>
+                            <figcaption>A bread assortment</figcaption>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda veritatis quasi, dolore ad porro blanditiis aliquid totam? Nobis assumenda laboriosam quisquam soluta aut, qui sapiente fuga! Earum sapiente sequi illo?</p>
                         </li>
                     </ol>
                 </article>
