--- a/HTML_CSS/contact.html
+++ b/HTML_CSS/contact.html
@@ -10,7 +10,7 @@
     <div class="contact-container">
         <header class="main-header">
             <div class="header-logo">
-            <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            <img src="images\BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
                 <li><a href="home.html">Home</a></li>
@@ -19,8 +19,8 @@
             </ul>
         </header>
         <main class="main-layout">
-            <section class="product-1">
-                <article class="contact">
+            <article class="product-1">
+                <section class="contact">
                     <ul>
                         <li>
                             <h1>Contact Us</h1>
