--- a/HTML_CSS/products.html
+++ b/HTML_CSS/products.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="main-header">
             <div class="header-logo">
-            <img src="https://www.loaf.co.nz/cache/content/catalogue/sT6Yro5/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            <img src="images\BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
                 <li><a href="home.html">Home</a></li>
@@ -19,26 +19,26 @@
             </ul>
         </header>
         <main class="main-layout">
-            <section class="product-1">
-                <img src="Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
+            <article class="product-1">
+                <img src="images\Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
                 <p>Here is Bread Co's inventory of different bread types </p>
-                <article class="product-2">
+                <section class="product-2">
                     <ul>
                         <li>
                             <h2>Bread 1</h2>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/7/74/Reik%C3%A4leip%C3%A4_view_from_above.jpg">
+                            <img src="images\Reikäleipä_view_from_above.jpg">
                             <figcaption>Rye bread</figcaption>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sunt cupiditate error animi excepturi velit quos quasi quas soluta, numquam pariatur exercitationem, incidunt iste magni sapiente voluptatum neque ratione. Officia?</p>
                         </li>
                         <li>
                             <h2>Bread 2</h2>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Fresh_made_bread_05.jpg">
+                            <img src="images\Fresh_made_bread_05.jpg">
                             <figcaption>Brown bread</figcaption>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugit earum, aspernatur ad, corporis hic odio facere corrupti provident praesentium delectus harum blanditiis eveniet aliquam voluptatum est, ea numquam distinctio?</p>
                         </li>
                         <li>
                             <h2>Bread 3</h2>
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/Breads_of_Russia.jpg">
+                            <img src="images\Breads_of_Russia.jpg">
                             <figcaption>A bread assortment</figcaption>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda veritatis quasi, dolore ad porro blanditiis aliquid totam? Nobis assumenda laboriosam quisquam soluta aut, qui sapiente fuga! Earum sapiente sequi illo?</p>
                         </li>
