--- a/HTML_CSS/home.html
+++ b/HTML_CSS/home.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header class="main-header">
             <div class="header-logo">
-            <img src="images\BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            <img src="images/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
                 <li><a href="home.html">Home</a></li>
@@ -21,7 +21,7 @@
         <main class="main-layout">
             <section class="section-content">
                 <h1>Bread Co</h1>
-                <img src="images\Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
+                <img src="images/Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora quam aperiam minima consequuntur unde quis autem delectus culpa magnam nobis, error nam modi nemo sapiente. Ipsa eveniet odit magni ratione.</p>
             </section>
         </main>
