--- a/HTML_CSS/contact.html
+++ b/HTML_CSS/contact.html
@@ -10,7 +10,7 @@
     <div class="contact-container">
         <header class="main-header">
             <div class="header-logo">
-            <img src="images\BAP11_-_Bap_Roll-496x600.png" alt="WIP">
+            <img src="images/BAP11_-_Bap_Roll-496x600.png" alt="WIP">
             </div>
             <ul class="header-buttons">
                 <li><a href="home.html">Home</a></li>
