--- a/HTML_CSS/products.html
+++ b/HTML_CSS/products.html
@@ -21,30 +21,30 @@
         <main class="main-layout">
             <article class="product-1">
                 <img src="images/Breads_of_Moskovskaya_Oblast._img_008.jpg" alt="">
-                <p>Here is Bread Co's inventory of different bread types </p>
+                <h1>Here is Bread Co's inventory of different bread types </h1>
                 <section class="product-2">
                     <ul>
                         <li>
                             <h2>Bread 1</h2>
-                            <img src="images/Reikäleipä_view_from_above.jpg">
-                            <figcaption>Rye bread</figcaption>
+                            <img src="images/Reikäleipä_view_from_above.jpg" alt="">
+                            <h3>Rye bread</h3>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et sunt cupiditate error animi excepturi velit quos quasi quas soluta, numquam pariatur exercitationem, incidunt iste magni sapiente voluptatum neque ratione. Officia?</p>
                         </li>
                         <li>
                             <h2>Bread 2</h2>
-                            <img src="images/Fresh_made_bread_05.jpg">
-                            <figcaption>Brown bread</figcaption>
+                            <img src="images/Fresh_made_bread_05.jpg" alt="">
+                            <h3>Brown bread</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint fugit earum, aspernatur ad, corporis hic odio facere corrupti provident praesentium delectus harum blanditiis eveniet aliquam voluptatum est, ea numquam distinctio?</p>
                         </li>
                         <li>
                             <h2>Bread 3</h2>
-                            <img src="images/Breads_of_Russia.jpg">
-                            <figcaption>A bread assortment</figcaption>
+                            <img src="images/Breads_of_Russia.jpg" alt="">
+                            <h3>A bread assortment</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda veritatis quasi, dolore ad porro blanditiis aliquid totam? Nobis assumenda laboriosam quisquam soluta aut, qui sapiente fuga! Earum sapiente sequi illo?</p>
                         </li>
-                    </ol>
-                </article>
-            </section>
+                    </ul>
+                </section>
+            </article>
         </main>
     </div>
 </body>
