--- a/HTML_CSS/contact.html
+++ b/HTML_CSS/contact.html
@@ -23,8 +23,8 @@
                 <section class="contact">
                     <ul>
                         <li>
-                            <h1>Contact Us</h1>
-                            <p>Visit us at:</p>
+                            <h2>Contact Us</h2>
+                            <h3>Visit us at:</h3>
                             <p>
                                 Bread Co<br>
                                 Karaportti 2<br>
