--- a/HTML_CSS/contact.html
+++ b/HTML_CSS/contact.html
@@ -20,7 +20,7 @@
         </header>
         <main class="main-layout">
             <article class="product-1">
-                <h1></h1>
+                <h1 class="hide">Heading</h1>
                 <section class="contact">
                     <ul>
                         <li>
@@ -36,7 +36,7 @@
                             </p>
                         </li>
                         <li>
-                            <h2></h2>
+                            <h2 class="hide">heading</h2>
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1981.3787173934008!2d24.756144977145585!3d60.224110339079274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x468df69f8c81ee65%3A0x153943742aa326e8!2sKaraportti%202%2C%2002610%20Espoo!5e0!3m2!1sfi!2sfi!4v1699019794560!5m2!1sfi!2sfi" 
                             style="border:0;" allowfullscreen="" loading="lazy" 
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
