JS Tehtävät Mod. 1 T1-4

--- a/JavaScript/Moduuli1/T1/T1_console_print.html
+++ b/JavaScript/Moduuli1/T1/T1_console_print.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="console_print.js" defer></script>
+    <script src="T1_console_print.js" defer></script>
 </head>
 <body>
     <h1>Console_Print</h1>
