--- a/JavaScript/Moduuli1/T2/T2_Name_Prompt.html
+++ b/JavaScript/Moduuli1/T2/T2_Name_Prompt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="Name_Prompt.js" defer></script>
+    <script src="T2_Name_Prompt.js" defer></script>
 </head>
 <body>
     <h1>Name_Prompt</h1>
