--- a/JavaScript/Moduuli1/T4/T4_Sorting_Hat.html
+++ b/JavaScript/Moduuli1/T4/T4_Sorting_Hat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="Sorting_Hat.js" defer></script>
+    <script src="T4_Sorting_Hat.js" defer></script>
 </head>
 <body>
     <h1>Sorting Hat</h1>
