--- a/JavaScript/Moduuli1/T3/T3_Three_Integers.html
+++ b/JavaScript/Moduuli1/T3/T3_Three_Integers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript testing</title>
-    <script src="Three_Integers.js" defer></script>
+    <script src="T3_Three_Integers.js" defer></script>
 </head>
 <body>
     <h1>Three Integers</h1>
