--- a/JavaScript/Moduuli4/T4/T4.html
+++ b/JavaScript/Moduuli4/T4/T4.html
@@ -8,7 +8,7 @@
 <body>
 
 <form id="tv-form">
-  <input id="query" type="text">
+  <input id="query" name="q" type="text">
   <input type="submit" value="Search">
 </form>
 
